[package]
name = "kwiez"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
warp = "0.3"
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.114"
chrono = "0.4.35"
base64 = "0.22.0"
dotenv = "0.15.0"
tokio-postgres = { version = "0.7.10", features = ["with-serde_json-1", "with-chrono-0_4"]}
